examples/test/testpolicy14681.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14681
  namespace: namespace356
spec:
  podSelector:
    matchLabels:
      key27: value33
      key6: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value20
          key11: value36
      podSelector:
        matchLabels:
          key32: value24
          key8: value37
